Fixed sudo and auth bugs.

--- a/apache/templates/httpd.conf
+++ b/apache/templates/httpd.conf
@@ -1015,3 +1015,21 @@ NameVirtualHost *:443
 
 # Disable TRACE and TRACK functions
 TraceEnable Off
+
+# Disable eTags to improve browser caching performance
+FileETag none
+
+# Configure mod_deflate for GZip compression
+SetOutputFilter DEFLATE
+
+# Exclude some browser versions from GZip
+BrowserMatch ^Mozilla/4 gzip-only-text/html
+BrowserMatch ^Mozilla/4\.0[678] no-gzip
+BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
+
+# Certain images do not need compressed
+SetEnvIfNoCase Request_URI \
+\.(?:gif|jpe?g|png)$ no-gzip dont-vary
+
+# Make sure proxies deliver the correct content
+Header append Vary User-Agent env=!dont-vary
