add a check around ssl.conf to prevent double loading w\aegir

--- a/apache/files/ssl.conf
+++ b/apache/files/ssl.conf
@@ -12,8 +12,9 @@
 # what they do.  They're here only as hints or reminders.  If you are unsure
 # consult the online docs. You have been warned.
 #
-
-LoadModule ssl_module modules/mod_ssl.so
+<IfModule !ssl_module>
+  LoadModule ssl_module modules/mod_ssl.so
+</IfModule>
 
 #
 # When we also provide SSL we have to listen to the
