changed ssl to use key/cert/chain from private files

--- a/apache/files/ssl.conf
+++ b/apache/files/ssl.conf
@@ -37,8 +37,11 @@ SSLCipherSuite ALL:!aNULL:!ADH:!eNULL:!SSLv2:!LOW:!MEDIUM:!EXP:RC4+RSA:+HIGH
 AddType application/x-x509-ca-cert .crt
 AddType application/x-pkcs7-crl    .crl
 
-#   Certificate Chain:
+
+# Configure the global cert/chain/key
+SSLCertificateFile      /etc/httpd/conf/public.cert
 SSLCertificateChainFile /etc/httpd/conf/ca-chain.cert
+SSLCertificateKeyFile   /etc/httpd/conf/private.key
 
 #   Pass Phrase Dialog:
 #   Configure the pass phrase gathering process.
