--- a/apache/files/ssl.conf
+++ b/apache/files/ssl.conf
@@ -116,34 +116,10 @@ SSLProtocol all -SSLv2
 # See the mod_ssl documentation for a complete list.
 SSLCipherSuite ALL:!aNULL:!ADH:!eNULL:!SSLv2:!LOW:!MEDIUM:!EXP:RC4+RSA:+HIGH
 
-#   Server Certificate:
-# Point SSLCertificateFile at a PEM encoded certificate.  If
-# the certificate is encrypted, then you will be prompted for a
-# pass phrase.  Note that a kill -HUP will prompt again.  A new
-# certificate can be generated using the genkey(1) command.
-SSLCertificateFile /etc/pki/tls/certs/localhost.crt
-
-#   Server Private Key:
-#   If the key is not combined with the certificate, use this
-#   directive to point at the key file.  Keep in mind that if
-#   you've both a RSA and a DSA private key you can configure
-#   both in parallel (to also allow the use of DSA ciphers, etc.)
-SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
-
-#   Server Certificate Chain:
-#   Point SSLCertificateChainFile at a file containing the
-#   concatenation of PEM encoded CA certificates which form the
-#   certificate chain for the server certificate. Alternatively
-#   the referenced file can be the same as SSLCertificateFile
-#   when the CA certificates are directly appended to the server
-#   certificate for convinience.
-#SSLCertificateChainFile /etc/pki/tls/certs/server-chain.crt
-
-#   Certificate Authority (CA):
-#   Set the CA certificate verification path where to find CA
-#   certificates for client authentication or alternatively one
-#   huge file containing all of them (file must be PEM encoded)
-#SSLCACertificateFile /etc/pki/tls/certs/ca-bundle.crt
+# Certificate, chain, and key
+SSLCertificateFile      /etc/httpd/conf/public.cert
+SSLCertificateChainFile /etc/httpd/conf/ca-chain.cert
+SSLCertificateKeyFile   /etc/httpd/conf/private.key
 
 #   Client Authentication (Type):
 #   Client certificate verification type and depth.  Types are
