corrected path to kibana

--- a/kibana/files/httpd.conf
+++ b/kibana/files/httpd.conf
@@ -4,8 +4,8 @@
 <VirtualHost 164.107.58.61:80>
   ServerName logs.web.engineering.osu.edu
 
-  DocumentRoot /var/www/kibana/src
-  <Directory /var/www/kibana/src>
+  DocumentRoot /var/www/kibana
+  <Directory /var/www/kibana>
     Allow from all
     Options -Multiviews
   </Directory>
