adds shibboleth to all locations

--- a/shibboleth_server/files/shib.conf
+++ b/shibboleth_server/files/shib.conf
@@ -19,3 +19,9 @@
   </Location>
   Alias /shibboleth-sp/main.css /usr/share/shibboleth/main.css
 </IfModule>
+
+<Location />
+  AuthType shibboleth
+#  ShibRequestSetting requireSession 1
+  require shibboleth
+</Location>
