--- a/kibana/files/httpd.conf
+++ b/kibana/files/httpd.conf
@@ -1,8 +1,8 @@
 # Courtesy of https://github.com/sgzijl
 # config.js includes elasticsearch:    "https://"+window.location.hostname+":443",
 
-<VirtualHost 164.107.58.61:80>
-  ServerName logs.web.engineering.osu.edu
+<VirtualHost 164.107.58.65:80>
+  ServerName logstash.web.engineering.osu.edu
 
   DocumentRoot /var/www/kibana
   <Directory /var/www/kibana>
