Adjusted logstash config

--- a/elk/files/logstash.conf
+++ b/elk/files/logstash.conf
@@ -1,10 +1,11 @@
 input {
-  file {
-    path => "/tmp/messages-20140629"
+  lumberjack {
+    port => 4545
+    ssl_certificate => "/etc/httpd/conf/public.cert"
+    ssl_key => "/etc/httpd/conf/private.key"
+    type => "app_logs"
   }
 }
-
 output {
   elasticsearch { host => "localhost" }
-  stdout { codec => rubydebug }
 }
