Added apache filter to logstash

--- a/elk/files/logstash.conf
+++ b/elk/files/logstash.conf
@@ -6,6 +6,14 @@ input {
     type => "app_logs"
   }
 }
+
+filter {
+  grok {
+    type    => 'apache'
+    pattern => "%{COMBINEDAPACHELOG}"
+  }
+}
+
 output {
   elasticsearch { host => "localhost" }
 }
