Adjusted logstash config

--- a/elk/files/logstash.conf
+++ b/elk/files/logstash.conf
@@ -8,9 +8,17 @@ input {
 }
 
 filter {
-  grok {
-    type    => 'apache'
-    pattern => "%{COMBINEDAPACHELOG}"
+
+  if [type] == "apache-access" {
+    grok {
+      match => { "message" => "%{COMBINEDAPACHELOG}" }
+    }
+  }
+
+  if [type] == "syslog" {
+		grok {
+		  match => { "message" => "%{SYSLOGLINE}" }
+		}
   }
 }
 
