Added apache error patterns and filters

--- a/elk/files/logstash.conf
+++ b/elk/files/logstash.conf
@@ -15,10 +15,23 @@ filter {
     }
   }
 
+  if [type] == "apache-access-ssl" {
+    grok {
+      match => { "message" => "%{COMMONAPACHELOG}" }
+    }
+  }
+
   if [type] == "syslog" {
 		grok {
 		  match => { "message" => "%{SYSLOGLINE}" }
 		}
+  }
+
+  if [type] == "apache-error" {
+    grok {
+      match => { "message" => "%{APACHEERRORLOG}" }
+      patterns_dir => ["/etc/logstash/patterns"]
+    }
   }
 }
 
