Added parsing for ssh logs

--- a/elk/files/logstash.conf
+++ b/elk/files/logstash.conf
@@ -22,6 +22,14 @@ filter {
   }
 
   if [type] == "syslog" {
+    grok {
+      match => { "message" => "Accepted %{WORD:auth_method} for %{USER:username} from %{IP:src_ip} port %{INT:src_port} ssh2" }
+      add_field => [ "type", "ssh_success"]
+    }
+    grok {
+      match => { "message" => "Invalid user %{USER:username} from %{IP:src_ip}" }
+      add_field => [ "type", "ssh_failure"]
+    }
 		grok {
 		  match => { "message" => "%{SYSLOGLINE}" }
 		}
