Adjusted grok rules

--- a/elk/files/logstash.conf
+++ b/elk/files/logstash.conf
@@ -24,10 +24,12 @@ filter {
   if [type] == "syslog" {
     grok {
       match => { "message" => "Accepted %{WORD:auth_method} for %{USER:username} from %{IP:src_ip} port %{INT:src_port} ssh2" }
+      overwrite => [ "message" ]
       add_tag => [ "ssh_success" ]
     }
     grok {
       match => { "message" => "Invalid user %{USER:username} from %{IP:src_ip}" }
+      overwrite => [ "message" ]
       add_tag => [ "ssh_failure" ]
     }
 		grok {
