Adjusted grok rules

--- a/elk/files/logstash.conf
+++ b/elk/files/logstash.conf
@@ -26,11 +26,13 @@ filter {
       match => { "message" => "Accepted %{WORD:auth_method} for %{USER:username} from %{IP:src_ip} port %{INT:src_port} ssh2" }
       overwrite => [ "message" ]
       add_tag => [ "ssh_success" ]
+      drop_if_match => true
     }
     grok {
       match => { "message" => "Invalid user %{USER:username} from %{IP:src_ip}" }
       overwrite => [ "message" ]
       add_tag => [ "ssh_failure" ]
+      drop_if_match => true
     }
 		grok {
 		  match => { "message" => "%{SYSLOGLINE}" }
