Adjusted grok rules

--- a/elk/files/logstash.conf
+++ b/elk/files/logstash.conf
@@ -23,20 +23,23 @@ filter {
 
   if [type] == "syslog" {
     grok {
-      match => { "message" => "Accepted %{WORD:auth_method} for %{USER:username} from %{IP:src_ip} port %{INT:src_port} ssh2" }
+      match => [ "message", "Accepted %{WORD:auth_method} for %{USER:username} from %{IP:src_ip} port %{INT:src_port} ssh2" ]
       overwrite => [ "message" ]
       add_tag => [ "ssh_success" ]
       break_on_match => true
+      remove_tag => [ "_grokparsefailure" ]
     }
     grok {
-      match => { "message" => "Invalid user %{USER:username} from %{IP:src_ip}" }
+      match => [ "message", "Invalid user %{USER:username} from %{IP:src_ip}" ]
       overwrite => [ "message" ]
       add_tag => [ "ssh_failure" ]
       break_on_match => true
+      remove_tag => [ "_grokparsefailure" ]
     }
 		grok {
-		  match => { "message" => "%{SYSLOGLINE}" }
+		  match => [ "message", "%{SYSLOGLINE}" ]
       overwrite => [ "message" ]
+      remove_tag => [ "_grokparsefailure" ]
 		}
   }
 
