Added drupal logging

--- a/elk/files/logstash.conf
+++ b/elk/files/logstash.conf
@@ -45,8 +45,14 @@ filter {
 
   if [type] == "apache-error" {
     grok {
-      match => { "message" => "%{APACHEERRORLOG}" }
+      match => [ "message", "%{APACHEERRORLOG}" ]
       patterns_dir => ["/etc/logstash/patterns"]
+    }
+  }
+
+  if [type] == "drupal" {
+    grok {
+      match => [ "message", "^https?://%{HOSTNAME:drupal_vhost}\|%{NUMBER:drupal_timestamp}\|(?<drupal_action>[^\|]*)\|%{IP:drupal_ip}\|(?<drupal_request_uri>[^\|]*)\|(?<drupal_referer>[^\|]*)\|(?<drupal_uid>[^\|]*)\|(?<drupal_link>[^\|]*)\|(?<drupal_message>.*)" ]
     }
   }
 }
