--- a/apache/files/ssl.conf
+++ b/apache/files/ssl.conf
@@ -30,8 +30,24 @@ Listen 443
 ##
 
 #   Set default SSL protocol and cypher suites for vhosts
-SSLProtocol ALL -SSLv2
-SSLCipherSuite ALL:!aNULL:!ADH:!eNULL:!SSLv2:!LOW:!MEDIUM:!EXP:RC4+RSA:+HIGH
+# SSLProtocol ALL -SSLv2
+# SSLCipherSuite ALL:!aNULL:!ADH:!eNULL:!SSLv2:!LOW:!MEDIUM:!EXP:RC4+RSA:+HIGH
+
+################################################################
+# TLS Configureation from Mozilla Recommendations (Intermediate).
+# http://mozilla.github.io/server-side-tls/ssl-config-generator/
+################################################################
+
+SSLProtocol             all -SSLv2 -SSLv3
+
+SSLCipherSuite          ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
+
+SSLHonorCipherOrder     on
+
+Header add Strict-Transport-Security "max-age=15768000"
+
+
+
 
 #   Some MIME-types for downloading Certificates and CRLs
 AddType application/x-x509-ca-cert .crt
@@ -109,12 +125,25 @@ SSLEngine on
 #   SSL Protocol support:
 # List the enable protocol levels with which clients will be able to
 # connect.  Disable SSLv2 access by default:
-SSLProtocol all -SSLv2
+#SSLProtocol all -SSLv2
 
 #   SSL Cipher Suite:
 # List the ciphers that the client is permitted to negotiate.
 # See the mod_ssl documentation for a complete list.
-SSLCipherSuite ALL:!aNULL:!ADH:!eNULL:!SSLv2:!LOW:!MEDIUM:!EXP:RC4+RSA:+HIGH
+#SSLCipherSuite ALL:!aNULL:!ADH:!eNULL:!SSLv2:!LOW:!MEDIUM:!EXP:RC4+RSA:+HIGH
+
+################################################################
+# TLS Configureation from Mozilla Recommendations (Intermediate).
+# http://mozilla.github.io/server-side-tls/ssl-config-generator/
+################################################################
+
+SSLProtocol             all -SSLv2 -SSLv3
+
+SSLCipherSuite          ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
+
+SSLHonorCipherOrder     on
+
+Header add Strict-Transport-Security "max-age=15768000"
 
 # Certificate, chain, and key
 SSLCertificateFile      /etc/httpd/conf/public.cert
